<resources>
    <string name="app_name">CryptGallery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="buttonGallery">Gallery</string>
    <string name="buttonMenu">Menu</string>
    <string name="buttonPhoto">Take а Photo</string>
    <string name="menuDelete">Delete</string>
    <string name="nameGallery">Галерея</string>
    <string name="foto">Foto</string>
    <string name="send_to">Отправить фото</string>

    <string name="title_activity_details_fullscreen">DetailsFullscreenActivity</string>
    <string name="dummy_button"> </string>
    <string name="share">Отправить</string>
    <string name="delete">Удалить</string>
</resources>
