<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/share"
            android:icon="@android:drawable/ic_menu_share"
            app:showAsAction="ifRoom"
            android:title="@string/share"
            android:actionProviderClass="android.widget.ShareActionProvider" >
    </item>
    <item
            android:id="@+id/menuDelete"
            android:icon="@android:drawable/ic_menu_delete"
            app:showAsAction="always"
            android:title="@string/menuDelete">
    </item>
    <item
            android:id="@+id/buttonMenu"
            android:icon="@android:drawable/ic_menu_call"
            app:showAsAction="never"
            android:title="@string/buttonMenu">
    </item>
</menu>