<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.safercrypt.scgallery.DetailsFullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@android:color/transparent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorCleen"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_marginTop="24dp"/>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:keepScreenOn="true"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/ic_camera_white_48dp"
        android:layout_marginBottom="64dp"
        android:layout_marginRight="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccent" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/colorCleen"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:background="@android:color/transparent"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:elevation="4dp"
                android:text="@string/dummy_button" />

            <Button
                android:id="@+id/bottomShare"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:background="@android:color/transparent"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:drawableTop="@android:drawable/ic_menu_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="4dp"
                android:text="@string/share"
                 />

            <Button
                android:id="@+id/bottomDelete"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:background="@android:color/transparent"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:drawableTop="@android:drawable/ic_menu_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="4dp"
                android:text="@string/delete" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
